Update gpss posts to split url

--- a/_posts/2013-08-06-day-1.md
+++ b/_posts/2013-08-06-day-1.md
@@ -10,7 +10,8 @@ talks:
   title: "**Linear Regression**"
   pdf: "./assets/session1.pdf"
   ipynb: 
-  speaker: "[Neil Lawrence](http://inverseprobability.com)"
+  speaker: Neil Lawrence
+  url: http://inverseprobability.com
   institution: University of Sheffield
   youtube: QkXvNVMO78A
 - start: '11:15'
