--- a/_posts/2013-08-07-day-2.md
+++ b/_posts/2013-08-07-day-2.md
@@ -10,7 +10,8 @@ talks:
   title: "**Basis Functions**"
   pdf: "./assets/session2.pdf"
   ipynb: 
-  speaker: "[Neil Lawrence](http://inverseprobability.com)"
+  speaker: Neil Lawrence
+  url: http://inverseprobability.com
   institution: University of Sheffield
   youtube: PoNbOnUnOao
 - start: '10:30'
@@ -26,7 +27,8 @@ talks:
   title: "**Model Selection and Bayesian Inference**"
   pdf: "./assets/session2.pdf"
   ipynb: 
-  speaker: "[Neil Lawrence](http://inverseprobability.com)"
+  speaker: Neil Lawrence
+  url: http://inverseprobability.com
   institution: University of Sheffield
   youtube: RJEHuzgHl98
 ---
