--- a/_posts/2013-08-09-day-3.md
+++ b/_posts/2013-08-09-day-3.md
@@ -10,7 +10,8 @@ talks:
   title: "**Gaussian Processes I**"
   pdf: "./assets/session3.pdf"
   ipynb: 
-  speaker: "[Neil Lawrence](http://inverseprobability.com)"
+  speaker: Neil Lawrence
+  url: http://inverseprobability.com
   institution: " University of Sheffield"
   youtube: BETEUTO3CPM
 - start: '10:15'
@@ -26,7 +27,8 @@ talks:
   title: "**Gaussian Processes II**"
   pdf: "./assets/session3.pdf"
   ipynb: 
-  speaker: "[Neil Lawrence](http://inverseprobability.com)"
+  speaker: Neil Lawrence
+  url: http://inverseprobability.com
   institution: " University of Sheffield"
   youtube: MqgGqEcpsQY
 - start: '14:00'
