Update gpss posts to split url

--- a/_posts/2013-08-09-day-3.md
+++ b/_posts/2013-08-09-day-3.md
@@ -7,7 +7,7 @@ video: True
 talks:
 - start: '9:30'
   end: '10:15'
-  title: "**Gaussian Processes I**"
+  title: "Gaussian Processes I"
   pdf: "./assets/session3.pdf"
   ipynb: 
   speaker: Neil Lawrence
@@ -16,15 +16,15 @@ talks:
   youtube: BETEUTO3CPM
 - start: '10:15'
   end: '11:00'
-  title: "**Lab Class**"
+  title: "Lab Class"
   pdf: "./assets/lab1.pdf"
-  ipynb: http://nbviewer.ipython.org/github/gpschool/gprs13/blob/master/labs_gprs13.ipynb
+  ipynb: http://nbviewer.ipython.org/github/datsciafrica/gpss13/blob/master/labs_gprs13.ipynb
   speaker: "[Ricardo Andrade Pacheco](http://ric70x7.github.io) and [Neil Lawrence](http://inverseprobability.com)"
   institution: University of Sheffield
   youtube: 
 - start: '11:30'
   end: '12:30'
-  title: "**Gaussian Processes II**"
+  title: "Gaussian Processes II"
   pdf: "./assets/session3.pdf"
   ipynb: 
   speaker: Neil Lawrence
@@ -33,7 +33,7 @@ talks:
   youtube: MqgGqEcpsQY
 - start: '14:00'
   end: 
-  title: "**Bring Your Own Data**"
+  title: "Bring Your Own Data"
   pdf: 
   ipynb: 
   speaker: "[Neil Lawrence](http://inverseprobability.com) and [Ricardo Andrade Pacheco](http://ric70x7.github.io)"
