--- a/_posts/2013-08-06-day-1.md
+++ b/_posts/2013-08-06-day-1.md
@@ -7,7 +7,7 @@ video: True
 talks:
 - start: '9:30'
   end: '10:45'
-  title: "**Linear Regression**"
+  title: "Linear Regression"
   pdf: "./assets/session1.pdf"
   ipynb: 
   speaker: Neil Lawrence
@@ -16,7 +16,7 @@ talks:
   youtube: QkXvNVMO78A
 - start: '11:15'
   end: '12:30'
-  title: "**Lab Class**"
+  title: "Lab Class"
   pdf: "./assets/lab0.pdf"
   ipynb: http://nbviewer.ipython.org/github/gpschool/gprs13/blob/master/lab0_gprs13.ipynb
   speaker: "[Ricardo Andrade Pacheco](http://ric70x7.github.io) and [Neil Lawrence](http://inverseprobability.com)"
