--- a/_posts/2013-08-07-day-2.md
+++ b/_posts/2013-08-07-day-2.md
@@ -7,7 +7,7 @@ video: True
 talks:
 - start: '9:30'
   end: '10:30'
-  title: "**Basis Functions**"
+  title: "Basis Functions"
   pdf: "./assets/session2.pdf"
   ipynb: 
   speaker: Neil Lawrence
@@ -16,15 +16,15 @@ talks:
   youtube: PoNbOnUnOao
 - start: '10:30'
   end: '11:00'
-  title: "**Lab Class**"
+  title: "Lab Class"
   pdf: "./assets/lab0.pdf"
-  ipynb: lab_gprs13.ipynb
+  ipynb: 
   speaker: "[Ricardo Andrade Pacheco](http://ric70x7.github.io) and [Neil Lawrence](http://inverseprobability.com)"
   institution: University of Sheffield
   youtube: 
 - start: '11:30'
   end: '12:30'
-  title: "**Model Selection and Bayesian Inference**"
+  title: "Model Selection and Bayesian Inference"
   pdf: "./assets/session2.pdf"
   ipynb: 
   speaker: Neil Lawrence
