Update gpss posts to split url

--- a/_posts/2013-08-06-day-1.md
+++ b/_posts/2013-08-06-day-1.md
@@ -12,7 +12,7 @@ talks:
   ipynb: 
   speaker: Neil Lawrence
   url: http://inverseprobability.com
-  institution: University of Sheffield
+  institute: University of Sheffield
   youtube: QkXvNVMO78A
 - start: '11:15'
   end: '12:30'
@@ -20,6 +20,6 @@ talks:
   pdf: "./assets/lab0.pdf"
   ipynb: http://nbviewer.ipython.org/github/gpschool/gprs13/blob/master/lab0_gprs13.ipynb
   speaker: "[Ricardo Andrade Pacheco](http://ric70x7.github.io) and [Neil Lawrence](http://inverseprobability.com)"
-  institution: University of Sheffield
+  institute: University of Sheffield
   youtube: JNu_-E1NszI
 ---
