--- a/_posts/2013-08-07-day-2.md
+++ b/_posts/2013-08-07-day-2.md
@@ -12,7 +12,7 @@ talks:
   ipynb: 
   speaker: Neil Lawrence
   url: http://inverseprobability.com
-  institution: University of Sheffield
+  institute: University of Sheffield
   youtube: PoNbOnUnOao
 - start: '10:30'
   end: '11:00'
@@ -20,7 +20,7 @@ talks:
   pdf: "./assets/lab0.pdf"
   ipynb: 
   speaker: "[Ricardo Andrade Pacheco](http://ric70x7.github.io) and [Neil Lawrence](http://inverseprobability.com)"
-  institution: University of Sheffield
+  institute: University of Sheffield
   youtube: 
 - start: '11:30'
   end: '12:30'
@@ -29,6 +29,6 @@ talks:
   ipynb: 
   speaker: Neil Lawrence
   url: http://inverseprobability.com
-  institution: University of Sheffield
+  institute: University of Sheffield
   youtube: RJEHuzgHl98
 ---
