--- a/_posts/2013-08-09-day-3.md
+++ b/_posts/2013-08-09-day-3.md
@@ -12,7 +12,7 @@ talks:
   ipynb: 
   speaker: Neil Lawrence
   url: http://inverseprobability.com
-  institution: " University of Sheffield"
+  institute: " University of Sheffield"
   youtube: BETEUTO3CPM
 - start: '10:15'
   end: '11:00'
@@ -20,7 +20,7 @@ talks:
   pdf: "./assets/lab1.pdf"
   ipynb: http://nbviewer.ipython.org/github/datsciafrica/gpss13/blob/master/labs_gprs13.ipynb
   speaker: "[Ricardo Andrade Pacheco](http://ric70x7.github.io) and [Neil Lawrence](http://inverseprobability.com)"
-  institution: University of Sheffield
+  institute: University of Sheffield
   youtube: 
 - start: '11:30'
   end: '12:30'
@@ -29,7 +29,7 @@ talks:
   ipynb: 
   speaker: Neil Lawrence
   url: http://inverseprobability.com
-  institution: " University of Sheffield"
+  institute: " University of Sheffield"
   youtube: MqgGqEcpsQY
 - start: '14:00'
   end: 
@@ -37,6 +37,6 @@ talks:
   pdf: 
   ipynb: 
   speaker: "[Neil Lawrence](http://inverseprobability.com) and [Ricardo Andrade Pacheco](http://ric70x7.github.io)"
-  institution: " University of Sheffield"
+  institute: " University of Sheffield"
   youtube: 
 ---
