Update with new speaker listing form.

--- a/_posts/2013-08-06-day-1.md
+++ b/_posts/2013-08-06-day-1.md
@@ -19,7 +19,11 @@ talks:
   title: "Lab Class"
   pdf: "./assets/lab0.pdf"
   ipynb: http://nbviewer.ipython.org/github/gpschool/gprs13/blob/master/lab0_gprs13.ipynb
-  speaker: "[Ricardo Andrade Pacheco](http://ric70x7.github.io) and [Neil Lawrence](http://inverseprobability.com)"
+  facilitators:
+  - name: Ricardo Andrade Pacheco
+    url: http://ric70x7.github.io
+  - name: Neil D. Lawrence
+	url: http://inverseprobability.com
   institute: University of Sheffield
   youtube: JNu_-E1NszI
 ---
