--- a/_posts/2013-08-09-day-3.md
+++ b/_posts/2013-08-09-day-3.md
@@ -12,14 +12,18 @@ talks:
   ipynb: 
   speaker: Neil Lawrence
   url: http://inverseprobability.com
-  institute: " University of Sheffield"
+  institute: "University of Sheffield"
   youtube: BETEUTO3CPM
 - start: '10:15'
   end: '11:00'
   title: "Lab Class"
   pdf: "./assets/lab1.pdf"
   ipynb: http://nbviewer.ipython.org/github/datsciafrica/gpss13/blob/master/labs_gprs13.ipynb
-  speaker: "[Ricardo Andrade Pacheco](http://ric70x7.github.io) and [Neil Lawrence](http://inverseprobability.com)"
+  facilitators:
+  - name: Ricardo Andrade Pacheco
+    url: http://ric70x7.github.io
+  - name: Neil D. Lawrence
+	url: http://inverseprobability.com
   institute: University of Sheffield
   youtube: 
 - start: '11:30'
@@ -29,14 +33,18 @@ talks:
   ipynb: 
   speaker: Neil Lawrence
   url: http://inverseprobability.com
-  institute: " University of Sheffield"
+  institute: "University of Sheffield"
   youtube: MqgGqEcpsQY
 - start: '14:00'
   end: 
   title: "Bring Your Own Data"
   pdf: 
   ipynb: 
-  speaker: "[Neil Lawrence](http://inverseprobability.com) and [Ricardo Andrade Pacheco](http://ric70x7.github.io)"
-  institute: " University of Sheffield"
+  facilitators:
+  - name: Ricardo Andrade Pacheco
+    url: http://ric70x7.github.io
+  - name: Neil D. Lawrence
+	url: http://inverseprobability.com
+  institute: "University of Sheffield"
   youtube: 
 ---
